--- a/brewingtimer/Base.lproj/LaunchScreen.storyboard
+++ b/brewingtimer/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="r0T-qB-ISa">
-                                <rect key="frame" x="177" y="323" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </activityIndicatorView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="o5Y-X0-mE5">
+                                <rect key="frame" x="100" y="-179" width="174" height="1024"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hans-Wilhelm Warlo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H27-SL-MVq">
+                                <rect key="frame" x="121" y="642" width="132" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brewing Timer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jl6-BS-rHl">
+                                <rect key="frame" x="101" y="586" width="173" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4g9-8Y-UQY"/>
+                            <constraint firstItem="H27-SL-MVq" firstAttribute="top" secondItem="Jl6-BS-rHl" secondAttribute="bottom" constant="22" id="4hp-kf-cxj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="H27-SL-MVq" secondAttribute="bottom" constant="8" id="LOm-Nr-amc"/>
+                            <constraint firstItem="Jl6-BS-rHl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="e0m-hk-VUP"/>
+                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="100" id="tFa-hC-LSf"/>
+                            <constraint firstItem="H27-SL-MVq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="twK-gz-CW3"/>
+                            <constraint firstItem="o5Y-X0-mE5" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zeZ-Nh-sbU"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -35,4 +55,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon" width="1024" height="1024"/>
+    </resources>
 </document>
